Creating message feature

--- a/MEANunderBoard/angular-src/src/app/components/home/home.component.html
+++ b/MEANunderBoard/angular-src/src/app/components/home/home.component.html
@@ -20,8 +20,8 @@
     </div>
 
     <div class="col-md-4">
-        <h3>Bulletin board</h3>
-        <p>Post your thoughts</p>
+        <h3>Warning!</h3>
+        <p>May be highly addictive!</p>
     </div>
 
 </div>
