--- a/MEANunderBoard/angular-src/src/app/components/login/login.component.html
+++ b/MEANunderBoard/angular-src/src/app/components/login/login.component.html
@@ -19,5 +19,7 @@
         <input type="password" class="form-control" 
             [(ngModel)]="password" name="password">
     </div>
-    <input type="submit" class="btn btn-primary" value="Login">
+    <div class="form-group" style="margin-top: 20px;">
+        <input type="submit" class="btn btn-primary" value="Login">
+    </div>
 </form>
